feat: Implement enhanced command registry manager for better command organization and management
feat: Add notification event system with various types and severities for better event handling

feat: Create notification manager to handle notifications across multiple channels

feat: Introduce log notification channel for logging events to server logs

feat: Define notification channel interface for extensibility and support for various notification types

feat: Optimize storage manager for efficient file-based storage with JSON format and async operations

feat: Develop centralized error handling utility for consistent error logging and user feedback