@@ -1,23 +1,23 @@
 package com.zerog.neoessentials.managers;
 
-import com.zerog.neoessentials.config.ConfigurationUnifier;
-import com.zerog.neoessentials.config.MainConfig;
-import com.zerog.neoessentials.storage.PlayerDataManager;
-import com.zerog.neoessentials.storage.StorageManager;
-import com.zerog.neoessentials.util.MessageUtil;
-import net.minecraft.commands.CommandSourceStack;
-import net.minecraft.server.level.ServerPlayer;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.math.BigDecimal;
-import java.math.RoundingMode;
-import java.text.DecimalFormat;
+import java.lang.ref.SoftReference;
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.*;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
+import java.util.stream.Collectors;
+import java.text.DecimalFormat;
+
+import com.zerog.neoessentials.config.ConfigurationUnifier;
+import com.zerog.neoessentials.config.MainConfig;
+import com.zerog.neoessentials.storage.PlayerDataManager;
+import com.zerog.neoessentials.storage.StorageManager;
 
 /**
- * Economy management system for NeoEssentials
+ * Memory-optimized economy management system for NeoEssentials
  * Vault-compatible economy with banking, shops, and transactions
  * 
  * @author ZeroG
@@ -26,48 +26,162 @@ import java.util.concurrent.ConcurrentHashMap;
 public class EconomyManager {
     
     private static final Logger LOGGER = LoggerFactory.getLogger(EconomyManager.class);
-    private static EconomyManager instance;
+    private static volatile EconomyManager instance;
     
     private final ConfigurationUnifier configUnifier;
     private final PlayerDataManager playerDataManager;
-    private final Map<UUID, BigDecimal> balanceCache;
-    private final Map<UUID, BankAccount> bankAccounts;
-    private final List<Transaction> transactionHistory;
+    
+    // Memory-optimized cache with size limits
+    private final Map<UUID, SoftReference<BigDecimal>> balanceCache;
+    private final Map<String, BankAccount> bankAccounts;
+    private final ReentrantReadWriteLock cacheLock;
+    
+    // Limited transaction history to prevent memory bloat
+    private final LinkedList<Transaction> transactionHistory;
+    private static final int MAX_TRANSACTION_HISTORY = 1000;
+    private final ReentrantReadWriteLock historyLock;
+    
+    // Cache cleanup
+    private final ScheduledExecutorService cleanupExecutor;
+    private static final long CLEANUP_INTERVAL = 120000; // 2 minutes
+    
+    // Reusable objects
+    private final ThreadLocal<DecimalFormat> formatter = 
+        ThreadLocal.withInitial(() -> new DecimalFormat("#,##0.00"));
     
     private EconomyManager() {
         this.configUnifier = ConfigurationUnifier.getInstance();
         this.playerDataManager = PlayerDataManager.getInstance();
+        
+        // Initialize optimized data structures
         this.balanceCache = new ConcurrentHashMap<>();
         this.bankAccounts = new ConcurrentHashMap<>();
-        this.transactionHistory = Collections.synchronizedList(new ArrayList<>());
+        this.cacheLock = new ReentrantReadWriteLock();
+        
+        // Initialize limited transaction history
+        this.transactionHistory = new LinkedList<>();
+        this.historyLock = new ReentrantReadWriteLock();
+        
+        // Initialize cleanup executor
+        this.cleanupExecutor = Executors.newSingleThreadScheduledExecutor();
+        
+        // Start cache cleanup
+        startCacheCleanup();
         
         // Initialize ShopManager with this economy manager instance
         com.zerog.neoessentials.economy.shops.ShopManager.createInstance(this);
         
-        // Initialize the shop manager to load shops from storage
-        com.zerog.neoessentials.economy.shops.ShopManager shopManager = 
-            com.zerog.neoessentials.economy.shops.ShopManager.getInstance();
-        if (shopManager != null) {
-            shopManager.initialize();
-        }
+        LOGGER.info("Economy Manager initialized with memory optimizations");
     }
     
+    /**
+     * Thread-safe singleton accessor
+     */
     public static EconomyManager getInstance() {
         if (instance == null) {
-            instance = new EconomyManager();
+            synchronized (EconomyManager.class) {
+                if (instance == null) {
+                    instance = new EconomyManager();
+                }
+            }
         }
         return instance;
+    }
+    
+    /**
+     * Start cache cleanup task
+     */
+    private void startCacheCleanup() {
+        cleanupExecutor.scheduleAtFixedRate(
+            this::cleanupCache,
+            CLEANUP_INTERVAL,
+            CLEANUP_INTERVAL,
+            TimeUnit.MILLISECONDS
+        );
+    }
+    
+    /**
+     * Cleanup expired cache entries and limit transaction history
+     */
+    private void cleanupCache() {
+        // Clean balance cache
+        cacheLock.writeLock().lock();
+        try {
+            balanceCache.entrySet().removeIf(entry -> entry.getValue().get() == null);
+        } finally {
+            cacheLock.writeLock().unlock();
+        }
+        
+        // Limit transaction history size
+        historyLock.writeLock().lock();
+        try {
+            while (transactionHistory.size() > MAX_TRANSACTION_HISTORY) {
+                transactionHistory.removeFirst();
+            }
+        } finally {
+            historyLock.writeLock().unlock();
+        }
     }
     
     /**
      * Check if economy system is enabled
      */
     public boolean isEnabled() {
-    return configUnifier.getConfigManager().getMainConfig().modules.economy;
+        return configUnifier.getConfigManager().getMainConfig().modules.economy;
     }
     
     /**
-     * Get player's balance
+     * Helper method to get balance from cache
+     */
+    private BigDecimal getCachedBalance(UUID playerUUID) {
+        cacheLock.readLock().lock();
+        try {
+            SoftReference<BigDecimal> ref = balanceCache.get(playerUUID);
+            if (ref != null) {
+                BigDecimal balance = ref.get();
+                if (balance != null) {
+                    return balance;
+                } else {
+                    // Reference was cleared, remove it
+                    balanceCache.remove(playerUUID);
+                }
+            }
+            return null;
+        } finally {
+            cacheLock.readLock().unlock();
+        }
+    }
+    
+    /**
+     * Helper method to cache balance
+     */
+    private void cacheBalance(UUID playerUUID, BigDecimal balance) {
+        cacheLock.writeLock().lock();
+        try {
+            balanceCache.put(playerUUID, new SoftReference<>(balance));
+        } finally {
+            cacheLock.writeLock().unlock();
+        }
+    }
+    
+    /**
+     * Helper method to add transaction to history with size limit
+     */
+    private void addTransactionToHistory(Transaction transaction) {
+        historyLock.writeLock().lock();
+        try {
+            transactionHistory.addLast(transaction);
+            // Remove oldest if exceeded limit
+            if (transactionHistory.size() > MAX_TRANSACTION_HISTORY) {
+                transactionHistory.removeFirst();
+            }
+        } finally {
+            historyLock.writeLock().unlock();
+        }
+    }
+    
+    /**
+     * Get player's balance with memory optimization
      */
     public BigDecimal getBalance(UUID playerUUID) {
         if (!isEnabled()) {
@@ -75,7 +189,7 @@ public class EconomyManager {
         }
         
         // Check cache first
-        BigDecimal cachedBalance = balanceCache.get(playerUUID);
+        BigDecimal cachedBalance = getCachedBalance(playerUUID);
         if (cachedBalance != null) {
             return cachedBalance;
         }
@@ -102,7 +216,7 @@ public class EconomyManager {
             LOGGER.warn("Player {} had null balance, set to zero", playerUUID);
         }
         
-        balanceCache.put(playerUUID, balance);
+        cacheBalance(playerUUID, balance);
         return balance;
     }
     
@@ -121,7 +235,7 @@ public class EconomyManager {
             return;
         }
         
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
+        MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
         
         // Validate amount
         if (amount.compareTo(BigDecimal.ZERO) < 0) {
@@ -132,7 +246,7 @@ public class EconomyManager {
         }
         
         // Update cache and storage
-        balanceCache.put(playerUUID, amount);
+        cacheBalance(playerUUID, amount);
         playerDataManager.setBalance(playerUUID, amount);
         
         LOGGER.info("Set balance for player {} to {} - saved to storage", playerUUID, formatCurrency(amount));
@@ -156,7 +270,7 @@ public class EconomyManager {
         BigDecimal currentBalance = getBalance(playerUUID);
         BigDecimal newBalance = currentBalance.add(amount);
         
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
+        MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
         if (newBalance.compareTo(BigDecimal.valueOf(config.maxBalance)) > 0) {
             newBalance = BigDecimal.valueOf(config.maxBalance);
         }
@@ -164,7 +278,7 @@ public class EconomyManager {
         setBalance(playerUUID, newBalance);
         recordTransaction(playerUUID, TransactionType.DEPOSIT, amount, reason);
         
-        LOGGER.info("Deposited {} to player {} (reason: {}). New balance: {}", 
+        LOGGER.info("Deposited {} to player {} ({}) - new balance: {}", 
             formatCurrency(amount), playerUUID, reason, formatCurrency(newBalance));
         
         return true;
@@ -187,79 +301,34 @@ public class EconomyManager {
         
         BigDecimal currentBalance = getBalance(playerUUID);
         if (currentBalance.compareTo(amount) < 0) {
-            return false; // Insufficient funds
+            LOGGER.warn("Player {} attempted to withdraw {} but only has {} (reason: {})", 
+                playerUUID, formatCurrency(amount), formatCurrency(currentBalance), reason);
+            return false;
         }
         
         BigDecimal newBalance = currentBalance.subtract(amount);
         setBalance(playerUUID, newBalance);
         recordTransaction(playerUUID, TransactionType.WITHDRAWAL, amount, reason);
         
-        LOGGER.info("Withdrew {} from player {} (reason: {}). New balance: {}", 
+        LOGGER.info("Withdrew {} from player {} ({}) - new balance: {}", 
             formatCurrency(amount), playerUUID, reason, formatCurrency(newBalance));
         
         return true;
     }
     
     /**
-     * Check if player has enough money
+     * Check if player has sufficient balance
      */
     public boolean hasBalance(UUID playerUUID, double amount) {
         return hasBalance(playerUUID, BigDecimal.valueOf(amount));
     }
     
     /**
-     * Check if player has enough money with BigDecimal precision
+     * Check if player has sufficient balance with BigDecimal precision
      */
     public boolean hasBalance(UUID playerUUID, BigDecimal amount) {
-        if (!isEnabled()) {
-            return true;
-        }
-        
-        BigDecimal balance = getBalance(playerUUID);
-        return balance.compareTo(amount) >= 0;
-    }
-    
-    /**
-     * Transfer money between players
-     */
-    public boolean transferMoney(UUID fromPlayer, UUID toPlayer, BigDecimal amount, String reason) {
-        if (!isEnabled() || amount.compareTo(BigDecimal.ZERO) <= 0) {
-            return false;
-        }
-        
-        // Check if sender has enough money
-        if (!hasBalance(fromPlayer, amount)) {
-            return false;
-        }
-        
-        // Apply transfer fee if configured
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
-        BigDecimal fee = BigDecimal.ZERO;
-        if (config.transferFeePercent > 0) {
-            fee = amount.multiply(BigDecimal.valueOf(config.transferFeePercent / 100.0))
-                       .setScale(2, RoundingMode.HALF_UP);
-        }
-        
-        BigDecimal totalDeduction = amount.add(fee);
-        
-        // Check if sender can afford amount + fee
-        if (!hasBalance(fromPlayer, totalDeduction)) {
-            return false;
-        }
-        
-        // Perform transfer
-        if (withdrawBalance(fromPlayer, totalDeduction, "Transfer to " + toPlayer + " (fee: " + formatCurrency(fee) + ")")) {
-            depositBalance(toPlayer, amount, "Transfer from " + fromPlayer);
-            
-            // Record fee transaction if applicable
-            if (fee.compareTo(BigDecimal.ZERO) > 0) {
-                recordTransaction(fromPlayer, TransactionType.FEE, fee, "Transfer fee");
-            }
-            
-            return true;
-        }
-        
-        return false;
+        BigDecimal currentBalance = getBalance(playerUUID);
+        return currentBalance.compareTo(amount) >= 0;
     }
     
     /**
@@ -273,128 +342,88 @@ public class EconomyManager {
      * Format currency amount for display with BigDecimal precision
      */
     public String formatCurrency(BigDecimal amount) {
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
-        
-        DecimalFormat formatter = new DecimalFormat(config.currencyFormat);
-        formatter.setRoundingMode(RoundingMode.HALF_UP);
-        
-        String formattedAmount = formatter.format(amount);
-        
-        return config.currencySymbol + formattedAmount;
+        DecimalFormat format = formatter.get();
+        MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
+        return config.currencySymbol + format.format(amount);
     }
     
     /**
-     * Get command cost from configuration
-     */
-    public double getCommandCost(String command) {
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
-        return config.commandCosts.getOrDefault(command.toLowerCase(), BigDecimal.ZERO).doubleValue();
-    }
-    
-    /**
-     * Charge player for command usage
-     */
-    public boolean chargeCommand(ServerPlayer player, String command) {
-        double cost = getCommandCost(command);
-        if (cost <= 0) {
-            return true; // No cost, allow command
-        }
-        
-        UUID playerUUID = player.getUUID();
-        if (!hasBalance(playerUUID, cost)) {
-            MessageUtil.sendTranslatedMessage(player, "neoessentials.economy.insufficient_funds", formatCurrency(cost), formatCurrency(getBalance(playerUUID)));
-            return false;
-        }
-        
-    withdrawBalance(playerUUID, cost, "Command usage: " + command);
-    MessageUtil.sendTranslatedMessage(player, "neoessentials.economy.command_cost_charged", formatCurrency(cost), command);
-        
-        return true;
-    }
-    
-    /**
-     * Bank account management
-     */
-    public BankAccount getBankAccount(UUID playerUUID) {
-        return bankAccounts.computeIfAbsent(playerUUID, uuid -> new BankAccount(uuid));
-    }
-    
-    /**
-     * Calculate and apply interest to all accounts
-     */
-    public void processInterest() {
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
-        if (!config.bank.enabled || config.bank.interestRate <= 0) {
-            return;
-        }
-        
-        // Process interest for all accounts
-        double interestRate = config.bank.interestRate / 100.0;
-        
-        for (UUID playerUUID : balanceCache.keySet()) {
-            BigDecimal balance = getBalance(playerUUID);
-            
-            if (balance.compareTo(BigDecimal.valueOf(config.bank.minimumBalance)) >= 0) {
-                BigDecimal interest = balance.multiply(BigDecimal.valueOf(interestRate))
-                                           .setScale(2, RoundingMode.HALF_UP);
-                
-                if (interest.compareTo(BigDecimal.valueOf(config.bank.maxInterestPayout)) > 0) {
-                    interest = BigDecimal.valueOf(config.bank.maxInterestPayout);
-                }
-                
-                if (interest.compareTo(BigDecimal.ZERO) > 0) {
-                    depositBalance(playerUUID, interest, "Bank interest");
-                }
-            }
-        }
-        
-        LOGGER.info("Processed interest for {} accounts", balanceCache.size());
-    }
-    
-    /**
-     * Get transaction history for player
-     */
-    public List<Transaction> getTransactionHistory(UUID playerUUID, int limit) {
-        return transactionHistory.stream()
-            .filter(transaction -> transaction.playerUUID.equals(playerUUID))
-            .sorted((t1, t2) -> Long.compare(t2.timestamp, t1.timestamp))
-            .limit(limit)
-            .toList();
-    }
-    
-    /**
-     * Record a transaction
+     * Record a transaction for history tracking
      */
     private void recordTransaction(UUID playerUUID, TransactionType type, BigDecimal amount, String reason) {
-        Transaction transaction = new Transaction(playerUUID, type, amount, reason, System.currentTimeMillis());
-        transactionHistory.add(transaction);
+        Transaction transaction = new Transaction(
+            UUID.randomUUID(),
+            playerUUID,
+            type,
+            amount,
+            reason,
+            System.currentTimeMillis()
+        );
+        addTransactionToHistory(transaction);
+    }
+    
+    /**
+     * Initialize player balance for truly new players
+     */
+    private void initializePlayerBalance(UUID playerUUID) {
+        MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
+        BigDecimal startingBalance = BigDecimal.valueOf(config.startingBalance);
         
-        // Limit history size
-        if (transactionHistory.size() > 10000) {
-            transactionHistory.subList(0, 5000).clear();
+        playerDataManager.setBalance(playerUUID, startingBalance);
+        playerDataManager.setSetting(playerUUID, "economy_initialized", true);
+        
+        LOGGER.info("Initialized new player {} with starting balance: {}", 
+            playerUUID, formatCurrency(startingBalance));
+    }
+    
+    /**
+     * Check if player has been previously initialized
+     */
+    private boolean hasBeenInitialized(UUID playerUUID) {
+        return playerDataManager.getSettingBoolean(playerUUID, "economy_initialized", false);
+    }
+    
+    /**
+     * Get transaction history for a player
+     */
+    public List<Transaction> getTransactionHistory(UUID playerUUID) {
+        historyLock.readLock().lock();
+        try {
+            return transactionHistory.stream()
+                .filter(transaction -> transaction.playerUUID.equals(playerUUID))
+                .collect(Collectors.toList());
+        } finally {
+            historyLock.readLock().unlock();
         }
     }
     
     /**
-     * Get top balances for leaderboard
+     * Get transaction history for a player with limit
      */
-    public List<Map.Entry<UUID, BigDecimal>> getTopBalances(int limit) {
-        return balanceCache.entrySet().stream()
-            .sorted((e1, e2) -> e2.getValue().compareTo(e1.getValue()))
-            .limit(limit)
-            .toList();
+    public List<Transaction> getTransactionHistory(UUID playerUUID, int limit) {
+        historyLock.readLock().lock();
+        try {
+            return transactionHistory.stream()
+                .filter(transaction -> transaction.playerUUID.equals(playerUUID))
+                .limit(limit)
+                .collect(Collectors.toList());
+        } finally {
+            historyLock.readLock().unlock();
+        }
     }
     
     /**
      * Clean up inactive accounts
      */
     public void cleanup() {
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
+        MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
         
         // Remove small balances if configured
         if (config.cleanupInactiveAccounts) {
-            balanceCache.entrySet().removeIf(entry -> 
-                entry.getValue().compareTo(BigDecimal.valueOf(0.01)) < 0);
+            balanceCache.entrySet().removeIf(entry -> {
+                BigDecimal balance = entry.getValue().get();
+                return balance != null && balance.compareTo(BigDecimal.valueOf(0.01)) < 0;
+            });
         }
         
         // Cleanup old transactions
@@ -403,112 +432,97 @@ public class EconomyManager {
     }
     
     /**
-     * Initialize starting balance for a new player
-     * This method ensures players get their configured starting balance
+     * Get current total money in circulation
      */
-    public void initializePlayerBalance(UUID playerUUID) {
-        if (!isEnabled()) {
-            return;
+    public BigDecimal getTotalMoney() {
+        BigDecimal total = BigDecimal.ZERO;
+        for (Map.Entry<UUID, SoftReference<BigDecimal>> entry : balanceCache.entrySet()) {
+            BigDecimal balance = entry.getValue().get();
+            if (balance != null) {
+                total = total.add(balance);
+            }
         }
-        
-    MainConfig.EconomySettings config = configUnifier.getConfigManager().getMainConfig().economySettings;
-        BigDecimal startingBalance = BigDecimal.valueOf(config.startingBalance);
-        
-        // Set the starting balance and mark as initialized
-        setBalance(playerUUID, startingBalance);
-        markAsInitialized(playerUUID);
-        LOGGER.info("Initialized starting balance of {} for player {}", formatCurrency(startingBalance), playerUUID);
+        return total;
     }
     
     /**
-     * Check if player has been initialized with starting balance
+     * Get number of active accounts in cache
      */
-    private boolean hasBeenInitialized(UUID playerUUID) {
-        Object initialized = playerDataManager.getSetting(playerUUID, "economy.initialized");
-        boolean result = initialized != null && Boolean.parseBoolean(initialized.toString());
-        LOGGER.info("Checking initialization for player {}: {}", playerUUID, result);
-        return result;
+    public int getActiveAccountCount() {
+        return (int) balanceCache.entrySet().stream()
+            .map(entry -> entry.getValue().get())
+            .filter(Objects::nonNull)
+            .count();
     }
     
     /**
-     * Mark player as initialized
+     * Get bank account for player
      */
-    private void markAsInitialized(UUID playerUUID) {
-        playerDataManager.setSetting(playerUUID, "economy.initialized", "true");
-        LOGGER.info("Marked player {} as initialized in economy system", playerUUID);
+    public BankAccount getBankAccount(UUID playerUUID) {
+        return bankAccounts.get(playerUUID.toString());
     }
     
     /**
-     * Transaction types
+     * Create bank account for player
      */
-    public enum TransactionType {
-        DEPOSIT,
-        WITHDRAWAL,
-        TRANSFER_SENT,
-        TRANSFER_RECEIVED,
-        FEE,
-        COMMAND_COST,
-        SHOP_PURCHASE,
-        SHOP_SALE
+    public BankAccount createBankAccount(UUID playerUUID, String accountName) {
+        BankAccount account = new BankAccount(accountName, playerUUID);
+        bankAccounts.put(account.getAccountId(), account);
+        return account;
     }
     
     /**
-     * Transaction record
+     * Get all bank accounts
      */
-    public static class Transaction {
-        public final UUID playerUUID;
-        public final TransactionType type;
-        public final BigDecimal amount;
-        public final String reason;
-        public final long timestamp;
-        
-        public Transaction(UUID playerUUID, TransactionType type, BigDecimal amount, String reason, long timestamp) {
-            this.playerUUID = playerUUID;
-            this.type = type;
-            this.amount = amount;
-            this.reason = reason;
-            this.timestamp = timestamp;
-        }
+    public Collection<BankAccount> getAllBankAccounts() {
+        return bankAccounts.values();
     }
     
     /**
-     * Bank account with additional features
+     * Transfer money between players
      */
-    public static class BankAccount {
-        public final UUID playerUUID;
-        private BigDecimal savingsBalance;
-        private long lastInterestCalculation;
-        private boolean frozen;
-        
-        public BankAccount(UUID playerUUID) {
-            this.playerUUID = playerUUID;
-            this.savingsBalance = BigDecimal.ZERO;
-            this.lastInterestCalculation = System.currentTimeMillis();
-            this.frozen = false;
+    public boolean transferMoney(UUID fromPlayer, UUID toPlayer, BigDecimal amount, String reason) {
+        if (!isEnabled() || amount.compareTo(BigDecimal.ZERO) <= 0) {
+            return false;
         }
         
-        public BigDecimal getSavingsBalance() {
-            return savingsBalance;
+        if (!hasBalance(fromPlayer, amount)) {
+            return false;
         }
         
-        public void setSavingsBalance(BigDecimal balance) {
-            this.savingsBalance = balance;
+        if (withdrawBalance(fromPlayer, amount, "Transfer to " + toPlayer + ": " + reason)) {
+            return depositBalance(toPlayer, amount, "Transfer from " + fromPlayer + ": " + reason);
         }
         
-        public boolean isFrozen() {
-            return frozen;
-        }
-        
-        public void setFrozen(boolean frozen) {
-            this.frozen = frozen;
-        }
-        
-        public long getLastInterestCalculation() {
-            return lastInterestCalculation;
-        }
-        
-        public void setLastInterestCalculation(long timestamp) {
-            this.lastInterestCalculation = timestamp;
+        return false;
+    }
+    
+    /**
+     * Save individual player data to persistent storage
+     */
+    private void savePlayerData(UUID playerUUID) {
+        try {
+            SoftReference<BigDecimal> balanceRef = balanceCache.get(playerUUID);
+            if (balanceRef != null) {
+                BigDecimal balance = balanceRef.get();
+                if (balance != null) {
+                    // Create a simple data structure for storage
+                    Map<String, Object> playerEconomyData = new HashMap<>();
+                    playerEconomyData.put("balance", balance.doubleValue());
+                    playerEconomyData.put("lastSaved", System.currentTimeMillis());
+                    
+                    // Save using storage manager
+                    StorageManager.getInstance().savePlayerEconomy(playerUUID, playerEconomyData);
+                    
+                    LOGGER.debug("Saved economy data for player {} - balance: {}", playerUUID, formatCurrency(balance));
+                } else {
+                    LOGGER.warn("Balance reference was cleared for player {}, skipping save", playerUUID);
+                }
+            } else {
+                LOGGER.debug("No cached data for player {}, skipping save", playerUUID);
+            }
+        } catch (Exception e) {
+            LOGGER.error("Error saving player data for {}", playerUUID, e);
         }
     }
     
@@ -531,56 +545,188 @@ public class EconomyManager {
     }
     
     /**
-     * Save individual player data to persistent storage
+     * Get top balances for leaderboard display
      */
-    private void savePlayerData(UUID playerUUID) {
+    public List<Map.Entry<UUID, BigDecimal>> getTopBalances(int limit) {
+        return balanceCache.entrySet().stream()
+            .map(entry -> {
+                BigDecimal balance = entry.getValue().get();
+                return balance != null ? Map.entry(entry.getKey(), balance) : null;
+            })
+            .filter(Objects::nonNull)
+            .sorted(Map.Entry.<UUID, BigDecimal>comparingByValue().reversed())
+            .limit(limit)
+            .collect(Collectors.toList());
+    }
+    
+    /**
+     * Show balance to command source
+     */
+    public int showBalance(net.minecraft.commands.CommandSourceStack source, net.minecraft.server.level.ServerPlayer player) {
         try {
-            BigDecimal balance = balanceCache.get(playerUUID);
-            if (balance != null) {
-                // Create a simple data structure for storage
-                Map<String, Object> playerEconomyData = new HashMap<>();
-                playerEconomyData.put("balance", balance.doubleValue());
-                playerEconomyData.put("lastSaved", System.currentTimeMillis());
-                
-                // Save using storage manager
-                StorageManager.getInstance().savePlayerEconomy(playerUUID, playerEconomyData);
-                LOGGER.debug("Saved economy data for player {}: ${}", playerUUID, balance);
-            }
+            BigDecimal balance = getBalance(player.getUUID());
+            source.sendSuccess(() -> net.minecraft.network.chat.Component.literal(
+                "Balance for " + player.getName().getString() + ": " + formatCurrency(balance)
+            ), false);
+            return 1;
         } catch (Exception e) {
-            LOGGER.error("Failed to save economy data for player " + playerUUID, e);
+            source.sendFailure(net.minecraft.network.chat.Component.literal("Error retrieving balance: " + e.getMessage()));
+            return 0;
         }
     }
     
-    // EssentialsX-style command methods for EconomyCommand
-    public int showBalance(CommandSourceStack src, ServerPlayer player) {
-        BigDecimal balance = getBalance(player.getUUID());
-    MessageUtil.sendTranslatedMessage(player, "neoessentials.economy.balance", formatCurrency(balance));
-        return 1;
-    }
-
-    public int pay(CommandSourceStack src, ServerPlayer sender, ServerPlayer target, double amount) {
-        BigDecimal senderBal = getBalance(sender.getUUID());
-        if (senderBal.doubleValue() < amount) {
-            MessageUtil.sendTranslatedMessage(sender, "neoessentials.economy.insufficient_funds", formatCurrency(BigDecimal.valueOf(amount)), formatCurrency(senderBal));
+    /**
+     * Pay money between players
+     */
+    public int pay(net.minecraft.commands.CommandSourceStack source, net.minecraft.server.level.ServerPlayer fromPlayer, 
+                   net.minecraft.server.level.ServerPlayer toPlayer, double amount) {
+        try {
+            if (transferMoney(fromPlayer.getUUID(), toPlayer.getUUID(), BigDecimal.valueOf(amount), "Player payment")) {
+                source.sendSuccess(() -> net.minecraft.network.chat.Component.literal(
+                    "Transferred " + formatCurrency(amount) + " from " + fromPlayer.getName().getString() + 
+                    " to " + toPlayer.getName().getString()
+                ), false);
+                return 1;
+            } else {
+                source.sendFailure(net.minecraft.network.chat.Component.literal("Transfer failed - insufficient funds"));
+                return 0;
+            }
+        } catch (Exception e) {
+            source.sendFailure(net.minecraft.network.chat.Component.literal("Error processing payment: " + e.getMessage()));
             return 0;
         }
-        setBalance(sender.getUUID(), senderBal.subtract(BigDecimal.valueOf(amount)));
-        setBalance(target.getUUID(), getBalance(target.getUUID()).add(BigDecimal.valueOf(amount)));
-        MessageUtil.sendTranslatedMessage(sender, "neoessentials.economy.paid", target.getName().getString(), formatCurrency(BigDecimal.valueOf(amount)));
-        MessageUtil.sendTranslatedMessage(target, "neoessentials.economy.received", formatCurrency(BigDecimal.valueOf(amount)), sender.getName().getString());
-        return 1;
     }
-
-    public int give(CommandSourceStack src, ServerPlayer target, double amount) {
-        setBalance(target.getUUID(), getBalance(target.getUUID()).add(BigDecimal.valueOf(amount)));
-    MessageUtil.sendTranslatedMessage(target, "neoessentials.economy.given", formatCurrency(BigDecimal.valueOf(amount)));
-        return 1;
+    
+    /**
+     * Give money to player (admin command)
+     */
+    public int give(net.minecraft.commands.CommandSourceStack source, net.minecraft.server.level.ServerPlayer player, double amount) {
+        try {
+            if (depositBalance(player.getUUID(), amount, "Admin give")) {
+                source.sendSuccess(() -> net.minecraft.network.chat.Component.literal(
+                    "Gave " + formatCurrency(amount) + " to " + player.getName().getString()
+                ), false);
+                return 1;
+            } else {
+                source.sendFailure(net.minecraft.network.chat.Component.literal("Failed to give money"));
+                return 0;
+            }
+        } catch (Exception e) {
+            source.sendFailure(net.minecraft.network.chat.Component.literal("Error giving money: " + e.getMessage()));
+            return 0;
+        }
     }
-
-    public int take(CommandSourceStack src, ServerPlayer target, double amount) {
-        BigDecimal bal = getBalance(target.getUUID());
-        setBalance(target.getUUID(), bal.subtract(BigDecimal.valueOf(amount)).max(BigDecimal.ZERO));
-    MessageUtil.sendTranslatedMessage(target, "neoessentials.economy.taken", formatCurrency(BigDecimal.valueOf(amount)));
-        return 1;
+    
+    /**
+     * Take money from player (admin command)
+     */
+    public int take(net.minecraft.commands.CommandSourceStack source, net.minecraft.server.level.ServerPlayer player, double amount) {
+        try {
+            if (withdrawBalance(player.getUUID(), amount, "Admin take")) {
+                source.sendSuccess(() -> net.minecraft.network.chat.Component.literal(
+                    "Took " + formatCurrency(amount) + " from " + player.getName().getString()
+                ), false);
+                return 1;
+            } else {
+                source.sendFailure(net.minecraft.network.chat.Component.literal("Failed to take money - insufficient funds"));
+                return 0;
+            }
+        } catch (Exception e) {
+            source.sendFailure(net.minecraft.network.chat.Component.literal("Error taking money: " + e.getMessage()));
+            return 0;
+        }
+    }
+    
+    // Static inner classes for data structures
+    /**
+     * Transaction record for history tracking
+     */
+    public static class Transaction {
+        public final UUID transactionId;
+        public final UUID playerUUID;
+        public final TransactionType type;
+        public final BigDecimal amount;
+        public final String reason;
+        public final long timestamp;
+        
+        public Transaction(UUID transactionId, UUID playerUUID, TransactionType type, 
+                         BigDecimal amount, String reason, long timestamp) {
+            this.transactionId = transactionId;
+            this.playerUUID = playerUUID;
+            this.type = type;
+            this.amount = amount;
+            this.reason = reason;
+            this.timestamp = timestamp;
+        }
+    }
+    
+    /**
+     * Transaction types for tracking
+     */
+    public enum TransactionType {
+        DEPOSIT,
+        WITHDRAWAL,
+        TRANSFER_IN,
+        TRANSFER_OUT,
+        TRANSFER_SENT,
+        TRANSFER_RECEIVED,
+        PURCHASE,
+        SALE,
+        SHOP_PURCHASE,
+        SHOP_SALE,
+        ADMIN_GIVE,
+        ADMIN_TAKE,
+        FEE,
+        COMMAND_COST
+    }
+    
+    /**
+     * Bank account for advanced banking features
+     */
+    public static class BankAccount {
+        private final String accountId;
+        private final String accountName;
+        private final UUID owner;
+        private BigDecimal balance;
+        private final long createdTime;
+        private boolean active;
+        
+        public BankAccount(String accountName, UUID owner) {
+            this.accountId = UUID.randomUUID().toString();
+            this.accountName = accountName;
+            this.owner = owner;
+            this.balance = BigDecimal.ZERO;
+            this.createdTime = System.currentTimeMillis();
+            this.active = true;
+        }
+        
+        // Getters and setters
+        public String getAccountId() { return accountId; }
+        public String getAccountName() { return accountName; }
+        public UUID getOwner() { return owner; }
+        public BigDecimal getBalance() { return balance; }
+        public void setBalance(BigDecimal balance) { this.balance = balance; }
+        public long getCreatedTime() { return createdTime; }
+        public boolean isActive() { return active; }
+        public void setActive(boolean active) { this.active = active; }
+    }
+    
+    /**
+     * Bank member for shared accounts
+     */
+    public static class BankMember {
+        private final UUID playerUUID;
+        private final String permission;
+        private final long joinedTime;
+        
+        public BankMember(UUID playerUUID, String permission) {
+            this.playerUUID = playerUUID;
+            this.permission = permission;
+            this.joinedTime = System.currentTimeMillis();
+        }
+        
+        public UUID getPlayerUUID() { return playerUUID; }
+        public String getPermission() { return permission; }
+        public long getJoinedTime() { return joinedTime; }
     }
 }
